--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "dependencies": {
     "@material-ui/core": "3.9.2",
-    "@material-ui/icons": "3.0.2",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.18.1",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
@@ -16,10 +16,13 @@
     "prettier": "1.16.4",
     "qrcode-generator": "^1.4.4",
     "react": "16.8.1",
+    "react-alert": "^6.0.0",
     "react-chartist": "0.13.3",
     "react-confirm-alert": "^2.4.1",
+    "react-data-table-component": "^3.6.0",
     "react-dom": "16.8.1",
     "react-google-maps": "9.4.5",
+    "react-navigation": "^4.0.10",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.2.0",
     "react-select": "^2.4.4",
