--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "dependencies": {
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
+    "@types/google-maps": "^3.2.1",
     "axios": "^0.18.1",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "history": "4.7.2",
+    "html-to-react": "^1.4.2",
+    "mapbox": "^1.0.0-beta10",
+    "mapbox-gl": "^1.5.0",
     "moment": "^2.24.0",
     "perfect-scrollbar": "1.4.0",
     "prettier": "1.16.4",
