--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "classnames": "2.2.6",
     "history": "4.7.2",
     "html-to-react": "^1.4.2",
+    "html2canvas": "^1.0.0-rc.5",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.2.11",
     "mapbox": "^1.0.0-beta10",
     "mapbox-gl": "^1.5.0",
     "moment": "^2.24.0",
@@ -27,11 +30,13 @@
     "react-dom": "16.8.1",
     "react-google-maps": "9.4.5",
     "react-navigation": "^4.0.10",
+    "react-print": "^1.3.1",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.2.0",
     "react-select": "^2.4.4",
     "react-swipeable-views": "0.13.1",
+    "react-to-print": "^2.5.0",
     "typescript": "^3.6.4"
   },
   "scripts": {
